0.95: Mon Apr  6 11:06:15 EDT 2009
   - split the pod to a separate file

0.92: Thu Mar 26 12:00:54 EDT 2009
   - messed up the META.yml

0.91: Thu Mar 26 08:52:39 EDT 2009
   - ditching the lgpl2 gz file for the new meta
   - added chrony's meta.yml stuff

0.9: Thu Aug  7 15:53:52 EDT 2008
   - ditched version.pm

0.7.3: Tue May 27 12:03:32 EDT 2008
   - (wow, use version has to be on the same line as our $VERSION
      for older EUMM)

0.7.2: Mon May 26 15:44:02 EDT 2008
   - I might as well do a new version of everything using
     version.pm while I wait for all my CPAN deletes to go
     through.  I just discovered that version.pm doesn't/didn't
     go core until perl 5.9...  I really wish I'd have prereqed
     it everywhere I used it, but I didn't.  *sigh*

0.7.1: Sat May 24 09:31:16 EDT 2008
   - using version.pm as suggested by Andreas Koenig